src/java/jcc/src/Calc.jj
options {
	STATIC = false;
	DEBUG_LOOKAHEAD=true;
}

PARSER_BEGIN(Calc)

package org.mars;
import java.io.StringReader;

    public class Calc {
        public static void main(String[] args) 
           throws ParseException, TokenMgrError {
            Calc parser = new Calc(System.in/*new StringReader(args[0])*/);
            int i = parser.start();
            //System.out.println(String.format("%s = %d", args[0], i));
        }
    }

PARSER_END(Calc)

SKIP: {
		" "
	|	"\n" 
	| "\r" 
	| "\r\n"
}
TOKEN: {<PLUS:"+" >}
TOKEN: {<NUMBER:(["0"-"9"])+ >}

int start(): {
    int i;
    int value;
} {
    value = INT()
    (
        <PLUS>
        i = INT()
        { value += i; }
    )*
		";"
    <EOF>
    { return value; }
}

int INT(): {
    Token t;
} {
   t = <NUMBER>
   { return Integer.parseInt(t.image); }
}
